--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/lodash": "^4.14.191",
 		"chart.js": "^4.1.1",
+		"lodash": "^4.17.21",
 		"svelte-chartjs": "^3.1.0"
 	}
 }
