--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
 	"type": "module",
 	"dependencies": {
 		"@types/lodash": "^4.14.191",
+		"@types/string-hash": "^1.1.1",
 		"chart.js": "^4.1.1",
 		"lodash": "^4.17.21",
+		"string-hash": "^1.1.3",
 		"svelte-chartjs": "^3.1.0"
 	}
 }
