--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"chart.js": "^4.1.1",
 		"lodash": "^4.17.21",
 		"string-hash": "^1.1.3",
-		"svelte-chartjs": "^3.1.0"
+		"svelte-chartjs": "^3.1.0",
+		"zod": "^3.20.2"
 	}
 }
