--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@leveluptuts/bookit": "^0.0.25",
 		"@neoconfetti/svelte": "^1.0.0",
+		"@skeletonlabs/skeleton": "^0.86.9",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@tailwindcss/forms": "^0.5.3",
