--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@types/string-hash": "^1.1.1",
 		"chart.js": "^4.1.1",
 		"lodash": "^4.17.21",
+		"ml-regression-simple-linear": "^2.0.3",
 		"string-hash": "^1.1.3",
 		"svelte-chartjs": "^3.1.0",
 		"zod": "^3.20.2"
