--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^1.0.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@types/cookie": "^0.5.1",
+		"@types/plotly.js-dist-min": "^2.3.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.13",
@@ -45,6 +46,8 @@
 		"chart.js": "^4.1.1",
 		"lodash": "^4.17.21",
 		"ml-regression-simple-linear": "^2.0.3",
+		"plotly.js-dist-min": "^2.18.0",
+		"save": "^2.9.0",
 		"string-hash": "^1.1.3",
 		"svelte-chartjs": "^3.1.0",
 		"zod": "^3.20.2"
